@@ -545,7 +545,7 @@ public class Topology extends BasePage {
         List<String> list = new ArrayList<>();
 
         targets.forEach((key, value) -> value.forEach((label, node) -> list.add(
-                String.format("connect('%s','%s','%s');", key, label, node.getKind()))));
+                "connect('%s','%s','%s');".formatted(key, label, node.getKind()))));
 
         return list;
     }
@@ -563,8 +563,8 @@ public class Topology extends BasePage {
 
             @Override
             public void renderHead(final Component component, final IHeaderResponse response) {
-                response.render(OnDomReadyHeaderItem.forScript(String.format("setPosition('%s', %d, %d)",
-                        node.getKey(), node.getX(), node.getY())));
+                response.render(OnDomReadyHeaderItem.forScript("setPosition('%s', %d, %d)".
+                        formatted(node.getKey(), node.getX(), node.getY())));
             }
         });
 
@@ -580,10 +580,10 @@ public class Topology extends BasePage {
             @Override
             protected void onEvent(final AjaxRequestTarget target) {
                 togglePanel.toggleWithContent(target, node);
-                target.appendJavaScript(String.format(
+                target.appendJavaScript(
                         "$('.window').removeClass(\"active-window\").addClass(\"inactive-window\"); "
                         + "$(document.getElementById('%s'))."
-                        + "removeClass(\"inactive-window\").addClass(\"active-window\");", node.getKey()));
+                        + "removeClass(\"inactive-window\").addClass(\"active-window\");".formatted(node.getKey()));
             }
         });
 
@@ -605,13 +605,13 @@ public class Topology extends BasePage {
             newlyCreated.getModelObject().add(node);
             payload.getTarget().add(newlyCreatedContainer);
 
-            payload.getTarget().appendJavaScript(String.format(
+            payload.getTarget().appendJavaScript(
                     "window.Wicket.WebSocket.send('"
-                    + "{\"kind\":\"%s\",\"target\":\"%s\",\"source\":\"%s\",\"scope\":\"%s\"}');",
-                    SupportedOperation.ADD_ENDPOINT,
-                    payload.getKey(),
-                    payload.getParent(),
-                    payload.getKind()));
+                    + "{\"kind\":\"%s\",\"target\":\"%s\",\"source\":\"%s\",\"scope\":\"%s\"}');".formatted(
+                            SupportedOperation.ADD_ENDPOINT,
+                            payload.getKey(),
+                            payload.getParent(),
+                            payload.getKind()));
         }
     }
 }
