@@ -222,7 +222,7 @@ public class Management extends WizardStep implements ICondition {
                     return StringUtils.EMPTY;
                 }
 
-                return String.format("[%s] %s", userTO.getKey(), userTO.getUsername());
+                return "[%s] %s".formatted(userTO.getKey(), userTO.getUsername());
             }
 
             @Override
@@ -269,7 +269,7 @@ public class Management extends WizardStep implements ICondition {
                     if (groupTO == null) {
                         return StringUtils.EMPTY;
                     } else {
-                        return String.format("[%s] %s", groupTO.getKey(), groupTO.getName());
+                        return "[%s] %s".formatted(groupTO.getKey(), groupTO.getName());
                     }
                 }
             }
